# sms

./: .gitignore  db.sqlite3  pyproject.toml  requirements.txt
home_auth/: adapters.py  admin.py  apps.py  models.py  signals.py  urls.py  views.py
home_auth/migrations/: 0001_initial.py  0002_alter_passwordresetrequest_token.py  0002_initial.py  0003_alter_passwordresetrequest_token.py  0004_alter_passwordresetrequest_token.py  0005_alter_passwordresetrequest_token.py  0006_alter_passwordresetrequest_token.py  0007_alter_passwordresetrequest_token.py  0008_alter_passwordresetrequest_token.py  0009_alter_passwordresetrequest_token.py  0009_customuser_profile_picture_and_more.py  0010_alter_customuser_profile_picture_and_more.py  0010_customuser_role_alter_passwordresetrequest_token.py  0011_alter_passwordresetrequest_token.py  0012_alter_passwordresetrequest_token.py  0013_alter_passwordresetrequest_token.py  0013_remove_customuser_role_and_more.py  0014_alter_passwordresetrequest_token.py  0015_alter_customuser_profile_picture_and_more.py  0015_alter_passwordresetrequest_token.py  0016_alter_passwordresetrequest_token.py  0017_alter_passwordresetrequest_token.py  (+54 more)
school/: admin.py  apps.py  context_processors.py  forms.py  middleware.py  models.py  signals.py  urls.py  utils.py  views.py
sms/: settings.py  urls.py  wsgi.py
student/: admin.py  apps.py  models.py  urls.py  views.py
templates/: exam_confirm_delete.html  exam_form.html  exam_list.html  time-table.html  timetable.html  timetable_calendar.html  timetable_confirm_delete.html  timetable_form.html
(+79 files in other folders)
